# gmrt_pipeline

./: PIPELINE_CHANGES.md  QUICKSTART.md  README.md  Snakefile  config_capture.toml  default_inputs.ini  default_inputs.inp  functions.py  main.py  pyproject.toml  rfi-strategy.aoflagger  setup.py  template.inp
classes/: CHANGES  ms.py
examples/: basic_reduction.py
functions/: casa_functions.py  flagging.py  general_functions.py
src/: casa_functions.py  flagging.py  general_functions.py  ms.py
src/capture/: __init__.py  main.py
src/capture/core/: __init__.py  calibration.py  imaging.py  pipeline.py  steps.py
src/capture/utils/: __init__.py  casa_tools.py  pipeline_state.py
