[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.package-data]

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "capture-casa6"
version = "1.0"
authors = [
    { name="Ruta Kale", email="ruta@ncra.tifr.res.in" },
]
description = "CAsa Pipeline-cum-Toolkit for Upgraded GMRT data REduction"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "casatasks",
    "numpy",
    "matplotlib",
    "snakemake>=7.0.0",
    "snakemake-executor-plugins"
]

[project.urls]
"Homepage" = "https://github.com/ruta-k/CAPTURE-CASA6"
"Bug Tracker" = "https://github.com/ruta-k/CAPTURE-CASA6/issues"


[project.scripts]
gmrtcapture = "capture.main:main"


